// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APICard initializes correctly 1`] = `
<div
  className="card"
>
  <img
    className="card-img-top p-4"
    src="avatar.png"
  />
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      Title
    </div>
    <p
      className="card-text"
    />
    <a
      className="card-link"
      href="https://www.google.com"
    >
      https://www.google.com
    </a>
  </div>
</div>
`;

exports[`ApartmentCard initializes correctly 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      Apartment: 
      Name
    </div>
    <p
      className="card-text"
    >
      Location: 
      City
    </p>
    <p
      className="card-text"
    >
      Price: 
      1000
    </p>
    <p
      className="card-text"
    >
      Type: 
      Apartment
    </p>
    <p
      className="card-text"
    >
      BuldYear: 
      1998
    </p>
    <a
      className="btn btn-dark"
      disabled={false}
      href="/apartment/1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      more info on 
      Name
    </a>
  </div>
</div>
`;

exports[`App initializes correctly 1`] = `
<div>
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-dark"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
      >
        GeoJobs
      </a>
      <button
        aria-controls="basic-navbar-nav"
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        aria-expanded={null}
        className="navbar-collapse collapse"
      >
        <div
          className="mr-auto navbar-nav"
          onKeyDown={[Function]}
        >
          <a
            className="nav-link"
            data-rr-ui-event-key="/"
            disabled={false}
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
          <a
            className="nav-link"
            data-rr-ui-event-key="/about"
            disabled={false}
            href="/about"
            onClick={[Function]}
          >
            About
          </a>
          <a
            className="nav-link"
            data-rr-ui-event-key="/jobs"
            disabled={false}
            href="/jobs"
            onClick={[Function]}
          >
            Jobs
          </a>
          <a
            className="nav-link"
            data-rr-ui-event-key="/cities"
            disabled={false}
            href="/cities"
            onClick={[Function]}
          >
            Cities
          </a>
          <a
            className="nav-link"
            data-rr-ui-event-key="/apartments"
            disabled={false}
            href="/apartments"
            onClick={[Function]}
          >
            Apartments
          </a>
        </div>
      </div>
    </div>
  </nav>
  <div
    className="main-home"
  >
    <div
      className="bg d-flex justify-content-center"
      style={
        Object {
          "backgroundImage": "url(splash-background.png)",
          "backgroundSize": "cover",
          "height": "100vh",
          "width": "100vw",
        }
      }
    >
      <h1
        className="bg-text"
        style={
          Object {
            "alignItems": "center",
            "backgroundPositionY": "1500",
            "color": "burlywood",
            "justifyContent": "center",
            "marginTop": "300px",
          }
        }
      >
        An easy place to find your dream job, city, and home.
      </h1>
    </div>
    <div
      className="p-4 container"
    >
      <h1
        className="d-flex justify-content-center p-4"
      >
        Where to next?
      </h1>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <div
            className="card"
          >
            <img
              className="card-img-top"
              src="job.jpeg"
            />
            <div
              className="card-body"
            >
              <div
                className="card-title h5"
              >
                Jobs
              </div>
              <p
                className="card-text"
              >
                Find your dream job!
              </p>
              <a
                class="btn btn-primary stretched-link"
                href="/jobs"
              >
                Link
              </a>
            </div>
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="card"
          >
            <img
              className="card-img-top"
              src="city.jpeg"
            />
            <div
              className="card-body"
            >
              <div
                className="card-title h5"
              >
                Cities
              </div>
              <p
                className="card-text"
              >
                Find your dream city!
              </p>
              <a
                class="btn btn-primary stretched-link"
                href="/cities"
              >
                Link
              </a>
            </div>
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="card"
          >
            <img
              className="card-img-top"
              src="home.jpeg"
            />
            <div
              className="card-body"
            >
              <div
                className="card-title h5"
              >
                Apartments
              </div>
              <p
                className="card-text"
              >
                Find your dream apartment!
              </p>
              <a
                class="btn btn-primary stretched-link"
                href="/apartments"
              >
                Link
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CityCard initializes correctly 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      Name
    </div>
    <p
      className="card-text"
    >
      State: 
      State
    </p>
    <p
      className="card-text"
    >
      Population: 
    </p>
    <p
      className="card-text"
    >
      Rating: 
      100
    </p>
    <p
      className="card-text"
    >
      Budget: 
    </p>
    <a
      className="btn btn-dark"
      disabled={false}
      href="/city/1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      more info on 
      Name
    </a>
  </div>
</div>
`;

exports[`DeveloperCard initializes correctly 1`] = `
<div
  className="card"
>
  <img
    className="card-img-top"
    src="avatar.png"
  />
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      Name
    </div>
    <div
      className="card-subtitle h6"
    >
      @
      GitLab User
    </div>
    <p
      className="card-text"
    >
      Role: 
      Role
    </p>
    <p
      className="card-text"
    >
      Bio
    </p>
  </div>
  <div
    className="text-muted card-footer"
  >
    Commits: 
    0
     
    <br />
    Issues: 
    0
     
    <br />
    Unit Tests: 
    0
  </div>
</div>
`;

exports[`JobCard Initial correctly 1`] = `
<div
  className="card"
  style={
    Object {
      "height": "25rem",
    }
  }
>
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      Title: 
      Title
    </div>
    <p
      className="card-text"
    >
      City: 
      City
    </p>
    <p
      className="card-text"
    >
      State: 
      State
    </p>
    <p
      className="card-text"
    >
      Salary: 
      100
    </p>
    <p
      className="card-text"
    >
      ContractType: 
    </p>
  </div>
  <div
    className="d-flex justify-content-center card-footer"
  >
    <a
      className="btn btn-dark"
      disabled={false}
      href="/job/1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      more info on 
    </a>
  </div>
</div>
`;

exports[`Navbar initializes correctly 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark"
>
  <div
    className="container"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      GeoJobs
    </a>
    <button
      aria-controls="basic-navbar-nav"
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="navbar-collapse collapse"
    >
      <div
        className="mr-auto navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          className="nav-link"
          data-rr-ui-event-key="/"
          disabled={false}
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
        <a
          className="nav-link"
          data-rr-ui-event-key="/about"
          disabled={false}
          href="/about"
          onClick={[Function]}
        >
          About
        </a>
        <a
          className="nav-link"
          data-rr-ui-event-key="/jobs"
          disabled={false}
          href="/jobs"
          onClick={[Function]}
        >
          Jobs
        </a>
        <a
          className="nav-link"
          data-rr-ui-event-key="/cities"
          disabled={false}
          href="/cities"
          onClick={[Function]}
        >
          Cities
        </a>
        <a
          className="nav-link"
          data-rr-ui-event-key="/apartments"
          disabled={false}
          href="/apartments"
          onClick={[Function]}
        >
          Apartments
        </a>
      </div>
    </div>
  </div>
</nav>
`;

exports[`PageCard initializes correctly 1`] = `
<div
  className="card"
>
  <img
    className="card-img-top"
    src="avatar.png"
  />
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      Name
    </div>
    <p
      className="card-text"
    >
      Description
    </p>
    <a
      class="btn btn-primary stretched-link"
      href="https://www.google.com"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`RouteSwitch initializes correctly 1`] = `
<div
  className="main-home"
>
  <div
    className="bg d-flex justify-content-center"
    style={
      Object {
        "backgroundImage": "url(splash-background.png)",
        "backgroundSize": "cover",
        "height": "100vh",
        "width": "100vw",
      }
    }
  >
    <h1
      className="bg-text"
      style={
        Object {
          "alignItems": "center",
          "backgroundPositionY": "1500",
          "color": "burlywood",
          "justifyContent": "center",
          "marginTop": "300px",
        }
      }
    >
      An easy place to find your dream job, city, and home.
    </h1>
  </div>
  <div
    className="p-4 container"
  >
    <h1
      className="d-flex justify-content-center p-4"
    >
      Where to next?
    </h1>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="card"
        >
          <img
            className="card-img-top"
            src="job.jpeg"
          />
          <div
            className="card-body"
          >
            <div
              className="card-title h5"
            >
              Jobs
            </div>
            <p
              className="card-text"
            >
              Find your dream job!
            </p>
            <a
              class="btn btn-primary stretched-link"
              href="/jobs"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="card"
        >
          <img
            className="card-img-top"
            src="city.jpeg"
          />
          <div
            className="card-body"
          >
            <div
              className="card-title h5"
            >
              Cities
            </div>
            <p
              className="card-text"
            >
              Find your dream city!
            </p>
            <a
              class="btn btn-primary stretched-link"
              href="/cities"
            >
              Link
            </a>
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="card"
        >
          <img
            className="card-img-top"
            src="home.jpeg"
          />
          <div
            className="card-body"
          >
            <div
              className="card-title h5"
            >
              Apartments
            </div>
            <p
              className="card-text"
            >
              Find your dream apartment!
            </p>
            <a
              class="btn btn-primary stretched-link"
              href="/apartments"
            >
              Link
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToolCard initializes correctly 1`] = `
<div
  className="card"
>
  <img
    className="card-img-top p-4"
    src="avatar.png"
  />
  <div
    className="card-body"
  >
    <div
      className="card-title h5"
    >
      Title
    </div>
    <p
      className="card-text"
    />
    <a
      className="card-link"
      href="https://www.google.com"
    >
      https://www.google.com
    </a>
  </div>
</div>
`;
